# HomeAutomation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
config/: logging.yaml
scripts/: develop.bat  service.bat  service.sh
src/mkhome/: __init__.py  __main__.py  events.py  settings.py
src/mkhome/bridges/: __init__.py  bond.py  lutron.py
src/mkhome/routes/: __init__.py  app.py  bond.py  lutron.py
src/mkhome/utils/: async_utils.py  requests.py
